Align the commit info to the issue toolbar.

--- a/ui/components/cr-issue-patchset.css
+++ b/ui/components/cr-issue-patchset.css
@@ -21,3 +21,7 @@ header .ui-actions {
     padding: 0 16px;
     flex-shrink: 0;
 }
+
+cr-issue-try-results {
+    margin-bottom: 0.5em;
+}
