--- a/ui/components/cr-issue.css
+++ b/ui/components/cr-issue.css
@@ -6,7 +6,6 @@ h2 {
 }
 
 .commit-status {
-    border-bottom: 1px solid #e5e5e5;
     margin: 0.5em 16px;
 }
 
